# OpenGauss

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  cli.py  gauss  main.code-workspace  model_tools.py  package.json  pyproject.toml  requirements.txt  run_agent.py  swarm_manager.py  toolsets.py
.github/workflows/: formalqualbench-verified8.yml
FoM/: FoM.lean  README.md  lake-manifest.json  lakefile.toml
FoM/.gauss/: project.yaml
FoM/FoM/: Basic.lean  Methodology.lean
Lean4/: .gitignore  Main.lean  OpenGaussLean4.lean  README.md  lake-manifest.json  lakefile.toml
Lean4/.gauss/: project.yaml
Lean4/OpenGaussLean4/: Basic.lean  ProblemSolvingMethodology.lean  ProblemSolvingStrategies.lean
acp_adapter/: entry.py
agent/: display.py  prompt_builder.py
docs/getting-started/: start-here.md
environments/: auth_bridge.py  gauss_base_env.py
gauss_cli/: __init__.py  auth.py  autoformalize.py  banner.py  codex_frontend.py  codex_models.py  commands.py  config.py  default_soul.py  doctor.py  intent_router.py  lean_comparator.py  lean_service.py  lean_workflow.py  lean_workflow_profiles.py  main.py  mcp_server.py  models.py  problem_solving_methodology.py  project.py  setup.py  status.py  tools_config.py
plans/: autoformalize-backend.md
scripts/: install-internal.sh  run_formalqualbench_hyper_campaign.py  run_formalqualbench_verified8.sh
tests/: conftest.py  test_cli_handoff_command.py  test_cli_loading_indicator.py  test_cli_status_bar.py  test_codex_models.py  test_environment_auth_bridge.py  test_formalqualbench_env.py  test_formalqualbench_hyper_campaign.py  test_model_tools.py  test_reasoning_command.py  test_resume_display.py  test_run_agent.py  test_run_agent_codex_responses.py  test_swarm_manager.py  test_toolsets.py
tools/: __init__.py  axle_tool.py  code_execution_tool.py  delegate_tool.py  lean_comparator_tool.py  lean_lsp_tool.py  lean_project_shell_tool.py  lean_workflow_tool.py  mcp_tool.py  registry.py
(+68 files in other folders)
