[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gauss-agent"
version = "0.2.2"
description = "Gauss is a focused Lean autoformalization workspace with a Codex frontend over the OpenGauss harness."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Math Inc." }]
license = { text = "MIT" }
dependencies = [
  # Core
  "axiom-axle>=1.2.0",
  "openai",
  "python-dotenv",
  "fire",
  "httpx",
  "rich",
  "tenacity",
  "pyyaml",
  "requests",
  "jinja2",
  "pydantic>=2.0",
]

[project.optional-dependencies]
modal = ["swe-rex[modal]>=1.4.0"]
daytona = ["daytona>=0.148.0"]
dev = ["pytest", "pytest-asyncio", "pytest-xdist", "mcp>=1.2.0"]
cli = ["simple-term-menu"]
lite = ["gauss-agent[cli]", "gauss-agent[pty]"]
gauss = ["gauss-agent[lite]", "gauss-agent[web]"]
web = ["firecrawl-py"]
image = ["fal-client"]
full = [
  "gauss-agent[lite]",
  "gauss-agent[web]",
  "gauss-agent[image]",
]
pty = [
  "ptyprocess>=0.7.0; sys_platform != 'win32'",
  "pywinpty>=2.0.0; sys_platform == 'win32'",
]
mcp = ["mcp>=1.2.0"]
all = [
  "gauss-agent[modal]",
  "gauss-agent[daytona]",
  "gauss-agent[full]",
  "gauss-agent[dev]",
  "gauss-agent[mcp]",
]

[project.scripts]
gauss = "gauss_cli.main:main"
gauss-agent = "run_agent:main"

[tool.setuptools]
py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "gauss_constants", "gauss_state", "gauss_time", "utils"]

[tool.setuptools.packages.find]
include = ["agent", "tools", "tools.*", "gauss_cli", "environments", "environments.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "core: marks the Lean/FormalQual/OpenGauss core surface",
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
]
addopts = "-m 'not integration' -n auto"
